# sux

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/: build_single_file.py
src/sux/: __init__.py  __main__.py  cli.py  config.py  constants.py  docker.py  git.py  proxy.py  session.py  testing.py  tmux.py  utils.py
src/sux/resources/: Dockerfile  docstring.md  tmux.conf
tests/: test_constants.py  test_docker.py  test_git.py  test_proxy.py  test_proxy_integration.py
